added images, modified CSS, added form to HTML

--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
 </head>
 
 <body>
-    <header> Artifically Tasty Recipes</header>
+    <header> Artifically Tasty Recipes </br>Let AI chef figure out "whats for dinner?"</header>
     <div class="recipe-container">
         <div>
-            <h1> AI Top Chef</h1>
-            <img src="dish_649457.png" width="50px" height="50px" />
+            <div>
+                <h1> AI Top Chef</h1>
+            </div>
+            <div class="images">
+                <img src="Images/dish_649457.png" width="50px" height="50px" />
+                <img src="Images/chef_450166.png" width="50px" height="50px" />
+                <img src="Images/vegetarian_648523.png" width="50px" height="50px" />
+            </div>
         </div>
         <div class="AI-Recipe-Generator-Container">
             <div>
-                <button> Get Recipe</button>
+                <form>
+                    <input type="text" placeholder="Enter Cuisine for Recipe" required />
+                    <input type="submit" />
+                </form>
             </div>
             <div class="recipe-instructions"> AI generated Recipe will display here</div>
         </div>
     </div>
-    <footer>Let someone else figure out "whats for dinner?"</footer>
+    <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on Nelify
+    </footer>
     <script src="src/index.js"></script>
 </body>
 
