added images and more CSS

--- a/index.html
+++ b/index.html
@@ -12,29 +12,33 @@
 </head>
 
 <body>
-    <header> Artifically Tasty Recipes </br>Let AI chef figure out "whats for dinner?"</header>
+    <header> Artifically Tasty Recipes </br>What's for dinner? 🤖</header>
     <div class="recipe-container">
         <div>
             <div>
                 <h1> AI Top Chef</h1>
             </div>
             <div class="images">
-                <img src="Images/dish_649457.png" width="50px" height="50px" />
-                <img src="Images/chef_450166.png" width="50px" height="50px" />
-                <img src="Images/vegetarian_648523.png" width="50px" height="50px" />
+                <img src="Images/chef_450166.png" width="75px" height="75px" />
+                <img src="Images/barbeque_450200.png" width="75px" height="75px" />
+                <img src="Images/beater_7105383.png" width="75px" height="75px" />
+                <img src="Images/dish_649457.png" width="75px" height="75px" />
             </div>
         </div>
         <div class="AI-Recipe-Generator-Container">
-            <div>
+            <div class="form-container">
                 <form>
-                    <input type="text" placeholder="Enter Cuisine for Recipe" required />
-                    <input type="submit" />
+                    <input type="text" placeholder="Enter Cuisine for Recipe" required class="recipe-input" />
+                    <input type="submit" class="recipe-button" />
                 </form>
             </div>
-            <div class="recipe-instructions"> AI generated Recipe will display here</div>
+            <div class="recipe-instructions"> AI
+                generated Recipe will display
+                here</div>
         </div>
     </div>
-    <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on Nelify
+    <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on
+        Nelify
     </footer>
     <script src="src/index.js"></script>
 </body>
