add typewriter plug-in

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Recipe Generator</title>
 </head>
 
@@ -32,9 +33,7 @@
                     <input type="submit" class="recipe-button" />
                 </form>
             </div>
-            <div class="recipe-instructions"> AI
-                generated Recipe will display
-                here</div>
+            <div class="recipe-instructions" id="recipe"></div>
         </div>
     </div>
     <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on
