--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <header> Artifically Tasty Recipes </br>What's for dinner? 🤖</header>
+    <header> Artifically Tasty Recipes </br>What's for dinner? <iframe src="https://giphy.com/embed/Cp5pEnpywwtuxCk0Fd"
+            frameBorder="0" class="giphy-embed" width="50px" height="50px"></iframe>
+    </header>
     <div class="recipe-container">
         <div>
             <div>
@@ -33,9 +35,11 @@
                     <input type="submit" class="recipe-button" />
                 </form>
             </div>
+            <div> I.E. Lasagna recipe, , Sushi, Ceviche</div>
             <div class="recipe-instructions" id="recipe"></div>
         </div>
     </div>
+
     <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on
         Nelify
     </footer>
