added project links to project

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         </div>
     </div>
 
-    <footer>This Project was coded and designed by Roxanne Keatings, it is opensourced on GitHub and hosted on
-        Nelify
+    <footer>This Project was coded and designed by <a href="https://github.com/RoxyKeatings" target="_blank">Roxanne
+            Keatings</a>, it is <a href="https://github.com/RoxyKeatings/AI-Recipes" target="_blank">opensourced on
+            GitHub</a> and hosted on <a href="https://aitopchef.netlify.app/" target="_blank">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
 </body>
