--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="submit" class="recipe-button" id="recipe-button" />
                 </form>
             </div>
-            <div class="examples"> <strong>I.E. Smoked Salmon, Salsa, Brownies !
+            <div class="examples"> <strong>I.E. Smoked Salmon, Salsa, Brownies, beverages !
                 </strong></div>
             <div class="recipe-instructions" id="recipe"></div>
         </div>
