modified placeholder context

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="AI-Recipe-Generator-Container">
             <div class="form-container">
                 <form id="recipe-topic-form">
-                    <input type="text" placeholder="Enter dish you would like to try..." required class="recipe-input"
+                    <input type="text" placeholder="Enter desired dish/drink" required class="recipe-input"
                         id="recipe-input" />
                     <input type="submit" class="recipe-button" id="recipe-button" />
                 </form>
